--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
   </distributionManagement>
 
   <modules>
+    <module>integration-util</module>
     <module>schemas</module>
     <module>model</module>
     <module>module-api</module>
@@ -63,6 +64,11 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>schemas</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>integration-util</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
