--- a/schemas/pom.xml
+++ b/schemas/pom.xml
@@ -37,7 +37,12 @@
 
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>module-api</artifactId>
+      <artifactId>integration-util</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>model</artifactId>
     </dependency>
 
     <dependency>
