Added storage possibility for serialized incoming JAXB request for registerMedicalCert..

--- a/web/src/main/resources/default.qa.properties
+++ b/web/src/main/resources/default.qa.properties
@@ -3,7 +3,7 @@ sendmedicalcertificatequestionv1.endpoint.url = https://qa.esb.ntjp.sjunet.org:2
 
 modules.port=8080
 
-# Use 2021005521 for Försäkringskassan and Test for dummy consumer.
+# Use 2021005521 for Fï¿½rsï¿½kringskassan and Test for dummy consumer.
 certificatesender.address.fk7263 = Test
 revokecertificate.address.fk7263 = Test
 
@@ -15,3 +15,5 @@ ws.certificate.type = PKCS12
 ws.truststore.file = /www/inera/misc/certificates/truststore-ntjp.jks
 ws.truststore.password = 
 ws.truststore.type = JKS
+
+store.original.certificate = true
