--- a/web/src/main/resources/default.dev.properties
+++ b/web/src/main/resources/default.dev.properties
@@ -5,3 +5,5 @@ modules.port=8080
 
 certificatesender.address.fk7263 = FK
 revokecertificate.address.fk7263 = FK
+
+store.original.certificate = true
