--- a/web/src/main/resources/default.test.properties
+++ b/web/src/main/resources/default.test.properties
@@ -14,3 +14,5 @@ ws.certificate.type = PKCS12
 ws.truststore.file = /home/intygadmin/.test.minaintyg.se/truststore.jks
 ws.truststore.password = password
 ws.truststore.type = JKS
+
+store.original.certificate = true
