Making CertificateSenderServiceImpl leverage modules to create XML output. Sender is now JAXB-unaware.
Removing all FK7263-specific files which have been moved to the fk7263 module.

--- a/web/src/main/resources/default.qa.properties
+++ b/web/src/main/resources/default.qa.properties
@@ -1,4 +1,4 @@
-registermedicalcertificatev3.endpoint.url = https://qa.esb.ntjp.sjunet.org:20000/vp/RegisterMedicalCertificate/3/rivtabp20
+registermedicalcertificatev3.endpoint.url = https://qa.esb.ntjp.sjunet.org:20000/vp/RegisterMedicalCertificate/3/rivtabp20?wsdl
 sendmedicalcertificatequestionv1.endpoint.url = https://qa.esb.ntjp.sjunet.org:20000/vp/SendMedicalCertificateQuestion/1/rivtabp20
 
 modules.port=8080
