--- a/specifications/pom.xml
+++ b/specifications/pom.xml
@@ -110,6 +110,26 @@
         </dependencies>
       </plugin>
       <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>src/test/fitnesse</directory>
+              <includes>
+                <include>FitNesseRoot/files</include>
+                <include>FitNesseRoot/FitNesse</include>
+                <include>FitNesseRoot/FrontPage</include>
+                <include>FitNesseRoot/PageFooter</include>
+                <include>FitNesseRoot/PageHeader</include>
+                <include>FitNesseRoot/RecentChanges</include>
+                <include>Resources</include>
+              </includes>
+            </fileset>
+          </filesets>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>uk.co.javahelp.fitnesse</groupId>
         <artifactId>fitnesse-launcher-maven-plugin</artifactId>
         <version>1.4.0-20130805</version>
