--- a/schemas/pom.xml
+++ b/schemas/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>certificate</artifactId>
     <groupId>se.inera.certificate</groupId>
-    <version>1.0-RC5-SNAPSHOT</version>
+    <version>1.0-RC5</version>
   </parent>
 
   <artifactId>schemas</artifactId>
