--- a/integration-util/pom.xml
+++ b/integration-util/pom.xml
@@ -33,5 +33,13 @@
       <artifactId>jackson-datatype-joda</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-transports-http</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+    </dependency>
   </dependencies>
 </project>
