--- a/web/pom.xml
+++ b/web/pom.xml
@@ -173,6 +173,10 @@
               <name>jetty.port</name>
               <value>8080</value>
             </systemProperty>
+            <systemProperty>
+              <name>java.awt.headless</name>
+              <value>true</value>
+            </systemProperty>            
           </systemProperties>
         </configuration>
         <dependencies>
