--- a/schemas/pom.xml
+++ b/schemas/pom.xml
@@ -196,6 +196,22 @@
                   <extraarg>
                     urn:riv:insuranceprocess:healthreporting:GetCertificateContent=se.inera.ifv.insuranceprocess.healthreporting.getcertificatecontentresponder.v1
                   </extraarg>
+                  <extraarg>-p</extraarg>
+                  <extraarg>
+                    urn:riv:itintegration:monitoring:PingForConfiguration:1:rivtabp21=se.riv.itintegration.monitoring.rivtabp21.v1
+                  </extraarg>
+                  <extraarg>-p</extraarg>
+                  <extraarg>
+                    urn:riv:itintegration:monitoring:PingForConfigurationResponder:1=se.riv.itintegration.monitoring.v1
+                  </extraarg>
+                  <extraarg>-p</extraarg>
+                  <extraarg>
+                    urn:riv:itintegration:monitoring:1=se.riv.itintegration.monitoring.v1
+                  </extraarg>
+                  <extraarg>-p</extraarg>
+                  <extraarg>
+                    urn:riv:itintegration:registry:1=se.riv.itintegration.registry.v1
+                  </extraarg>
                 </extraargs>
               </defaultOptions>
               <wsdlOptions>
@@ -395,6 +411,9 @@
                       classpath:schemas/v1/SendMedicalCertificateAnserInteraction/SendMedicalCertificateAnswerInteraction_1.0_rivtabp20.wsdl
                     </extraarg>
                   </extraargs>
+                </wsdlOption>
+                <wsdlOption>
+                  <wsdl>${schema.path}/interactions/PingForConfigurationInteraction/PingForConfigurationInteraction_1.0_RIVTABP21.wsdl</wsdl>
                 </wsdlOption>
               </wsdlOptions>
             </configuration>
