Corrected resource filtering for version

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -132,6 +132,22 @@
   </dependencies>
   <build>
     <finalName>inera-certificate</finalName>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>**/version.properties</include>
+        </includes>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+        <excludes>
+          <exclude>**/version.properties</exclude>
+        </excludes>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
