--- a/model/pom.xml
+++ b/model/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>certificate</artifactId>
     <groupId>se.inera.certificate</groupId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
   </parent>
 
   <artifactId>model</artifactId>
