--- a/module-api/pom.xml
+++ b/module-api/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>certificate</artifactId>
     <groupId>se.inera.certificate</groupId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>module-api</artifactId>
