--- a/migration-tool/migration-web/src/test/resources/config/batch-test.properties
+++ b/migration-tool/migration-web/src/test/resources/config/batch-test.properties
@@ -8,7 +8,7 @@ intyg.jdbc.password=
 intyg.schema.script=schema/intyg-schema-hsql.sql
 
 #
-intyg.update.sql=UPDATE certificate SET document = :jsonDocument WHERE id = :certId 
+intyg.update.sql=UPDATE certificate SET document = :certificateJson WHERE id = :certificateId
 intyg.select.sql.select=SELECT id, received, document
 intyg.select.sql.from=FROM original_certificate
 intyg.select.sortkey=id
