--- a/migration-tool/migration-web/src/main/resources/batch-default.properties
+++ b/migration-tool/migration-web/src/main/resources/batch-default.properties
@@ -4,4 +4,8 @@ intyg.jdbc.url=jdbc:mysql://localhost:3306/intyg
 intyg.jdbc.user=inera
 intyg.jdbc.password=inera
 
-intyg.update.sql=
+# Database reader and writer config
+intyg.update.sql=UPDATE certificate SET document = :certificateJson WHERE id = :certificateId
+intyg.select.sql.select=SELECT id, received, document
+intyg.select.sql.from=FROM original_certificate
+intyg.select.sortkey=id
