Added dbunit based dataloading to MigrationJobTest.

--- a/migration-tool/migration-web/src/test/resources/config/batch-test.properties
+++ b/migration-tool/migration-web/src/test/resources/config/batch-test.properties
@@ -1,6 +1,6 @@
 # Simulated target database
 intyg.jdbc.driver=org.hsqldb.jdbcDriver
-intyg.jdbc.url=jdbc:hsqldb:mem:testdb;sql.enforce_strict_size=true
+intyg.jdbc.url=jdbc:hsqldb:mem:targetdb;sql.enforce_strict_size=true
 intyg.jdbc.user=sa
 intyg.jdbc.password=
 
@@ -8,7 +8,7 @@ intyg.jdbc.password=
 intyg.schema.script=schema/intyg-schema-hsql.sql
 
 #
-intyg.update.sql=UPDATE certificate SET document = :certificateJson WHERE id = :certificateId
+intyg.update.sql=UPDATE certificate SET document = ? WHERE id = ?
 intyg.select.sql.select=SELECT id, received, document
 intyg.select.sql.from=FROM original_certificate
 intyg.select.sortkey=id
