--- a/migration-tool/migration-web/pom.xml
+++ b/migration-tool/migration-web/pom.xml
@@ -104,6 +104,18 @@
             <artifactId>log4j</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+        	<groupId>com.github.springtestdbunit</groupId>
+        	<artifactId>spring-test-dbunit</artifactId>
+        	<version>1.0.1</version>
+        	<scope>test</scope>
+        </dependency>
+        <dependency>
+        	<groupId>org.dbunit</groupId>
+        	<artifactId>dbunit</artifactId>
+        	<version>2.4.9</version>
+        	<scope>test</scope>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
