--- a/migration-tool/migration-web/src/main/resources/batch-default.properties
+++ b/migration-tool/migration-web/src/main/resources/batch-default.properties
@@ -5,7 +5,7 @@ intyg.jdbc.user=inera
 intyg.jdbc.password=inera
 
 # Database reader and writer config
-intyg.update.sql=UPDATE certificate SET document = :certificateJson WHERE id = :certificateId
+intyg.update.sql=UPDATE certificate SET document = ? WHERE id = ?
 intyg.select.sql.select=SELECT id, received, document
 intyg.select.sql.from=FROM original_certificate
-intyg.select.sortkey=id
+intyg.select.sortkey=received
