--- a/migration-tool/migration-web/src/test/resources/config/batch-test.properties
+++ b/migration-tool/migration-web/src/test/resources/config/batch-test.properties
@@ -4,11 +4,19 @@ intyg.jdbc.url=jdbc:hsqldb:mem:targetdb;sql.enforce_strict_size=true
 intyg.jdbc.user=sa
 intyg.jdbc.password=
 
+# Real MySQL test database
+#intyg.jdbc.driver=com.mysql.jdbc.Driver
+#intyg.jdbc.url=jdbc:mysql://localhost:3306/intyg
+#intyg.jdbc.user=inera
+#intyg.jdbc.password=inera
+
 # Schema to load into the target database
 intyg.schema.script=schema/intyg-schema-hsql.sql
 
-#
+intyg.generate.testdata=true
+
+# SQL queries to match HSQL dialect
 intyg.update.sql=UPDATE certificate SET document = ? WHERE id = ?
 intyg.select.sql.select=SELECT id, received, document
 intyg.select.sql.from=FROM original_certificate
-intyg.select.sortkey=id
+intyg.select.sortkey=received
