Added minimal http client for converting using a modules RESTapi

--- a/migration-tool/migration-web/src/main/resources/log4j.properties
+++ b/migration-tool/migration-web/src/main/resources/log4j.properties
@@ -11,3 +11,4 @@ log4j.category.org.springframework.transaction=INFO
 
 log4j.category.se.inera.certificate.migration.dummy=INFO
 log4j.category.se.inera.certificate.migration.processors=DEBUG
+log4j.category.se.inera.certificate.migration.rest=DEBUG
