--- a/migration-tool/migration-web/src/main/resources/batch-default.properties
+++ b/migration-tool/migration-web/src/main/resources/batch-default.properties
@@ -9,3 +9,5 @@ intyg.update.sql=UPDATE certificate SET document = :certificateJson WHERE id = :
 intyg.select.sql.select=SELECT id, received, document
 intyg.select.sql.from=FROM original_certificate
 intyg.select.sortkey=id
+
+intyg.rest.converter.url=http://localhost:8080/fk7263/api/unmarshall
