Added utility and supporting classes for generating and loading test data into database.

--- a/migration-tool/migration-web/src/main/resources/log4j.properties
+++ b/migration-tool/migration-web/src/main/resources/log4j.properties
@@ -10,5 +10,5 @@ log4j.category.org.springframework.jdbc=INFO
 log4j.category.org.springframework.transaction=INFO
 
 log4j.category.se.inera.certificate.migration.dummy=INFO
-log4j.category.se.inera.certificate.migration.processors=DEBUG
-log4j.category.se.inera.certificate.migration.rest=DEBUG
+log4j.category.se.inera.certificate.migration.processors=INFO
+log4j.category.se.inera.certificate.migration.rest=INFO
