--- a/migration-tool/migration-web/src/test/resources/config/batch-test.properties
+++ b/migration-tool/migration-web/src/test/resources/config/batch-test.properties
@@ -12,7 +12,9 @@ intyg.jdbc.password=
 
 # Schema to load into the target database
 intyg.schema.script=schema/intyg-schema-hsql.sql
+intyg.drop.script=schema/intyg-drop-hsql.sql
 
+# If to drop and load db schema 
 intyg.generate.testdata=true
 
 # SQL queries to match HSQL dialect
