Added partitioning to migration job. Job will now execute in parallell.

--- a/migration-tool/migration-web/src/main/resources/batch-default.properties
+++ b/migration-tool/migration-web/src/main/resources/batch-default.properties
@@ -8,6 +8,7 @@ intyg.jdbc.password=inera
 intyg.update.sql=UPDATE certificate SET document = ? WHERE id = ?
 intyg.select.sql.select=SELECT id, received, document
 intyg.select.sql.from=FROM original_certificate
+intyg.select.sql.where=id >= :minId and id <= :maxId
 intyg.select.sortkey=id
 
 intyg.rest.converter.url=http://localhost:8088/fk7263/api/unmarshall
