--- a/migration-tool/migration-web/src/test/resources/config/batch-test.properties
+++ b/migration-tool/migration-web/src/test/resources/config/batch-test.properties
@@ -21,4 +21,5 @@ intyg.generate.testdata=true
 intyg.update.sql=UPDATE certificate SET document = ? WHERE id = ?
 intyg.select.sql.select=SELECT id, received, document
 intyg.select.sql.from=FROM original_certificate
-intyg.select.sortkey=received
+intyg.select.sql.where=id >= :minId and id <= :maxId
+intyg.select.sortkey=id
