Made the http client in ConvertCertificateXMLToJSONProcessor able to be used in a multi-threaded execution context. Refactored Spring context files. The intyg data source now uses JNDI to obtain data source from container. Added config to Jetty plug-in for this. Improved and expanded unit tests.

--- a/migration-tool/migration-web/pom.xml
+++ b/migration-tool/migration-web/pom.xml
@@ -147,6 +147,7 @@
 		        <configuration>
 					<webAppConfig>
 		            	<contextPath>/migrationtool</contextPath>
+		            	<jettyEnvXml>${basedir}/src/test/resources/jetty-env.xml</jettyEnvXml>
           			</webAppConfig>
 				</configuration>
 				<dependencies>
