--- a/migration-tool/migration-web/src/main/webapp/WEB-INF/web.xml
+++ b/migration-tool/migration-web/src/main/webapp/WEB-INF/web.xml
@@ -49,4 +49,10 @@
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 
+	<resource-ref>
+		<res-ref-name>jdbc/intyg</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+
 </web-app>
