Added exception handling to the batch. Processors now throw exceptions when errors occur. Improved logging and directed the log output to be written to file.

--- a/migration-tool/migration-web/pom.xml
+++ b/migration-tool/migration-web/pom.xml
@@ -136,7 +136,12 @@
         	<version>2.3</version>
         	<scope>test</scope>
         </dependency>
-        
+
+        <dependency>
+        	<groupId>org.mockito</groupId>
+        	<artifactId>mockito-all</artifactId>
+        	<scope>test</scope>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -152,6 +157,16 @@
 		            	<contextPath>/migrationtool</contextPath>
 		            	<jettyEnvXml>${basedir}/src/test/resources/jetty-env.xml</jettyEnvXml>
           			</webAppConfig>
+          			<systemProperties>
+			            <systemProperty>
+			              <name>catalina.home</name>
+			              <value>${project.build.directory}/logs</value>
+			            </systemProperty>
+			            <systemProperty>
+			              <name>jetty.port</name>
+			              <value>8082</value>
+			            </systemProperty>
+					</systemProperties>
 				</configuration>
 				<dependencies>
 					<dependency>
