Modified test db script for new column for certificate id in original_certificate. Added logic to batch for updating original_certificate table with the certificate id and modified tests to test for this. Exploring new error listeners.

--- a/migration-tool/migration-web/src/main/resources/batch-default.properties
+++ b/migration-tool/migration-web/src/main/resources/batch-default.properties
@@ -1,6 +1,11 @@
-# Database reader and writer config
-intyg.update.sql=UPDATE certificate SET document = ? WHERE id = ?
-intyg.select.sql.select=SELECT id, received, document
-intyg.select.sql.from=FROM original_certificate
-intyg.select.sql.where=id >= :minId and id <= :maxId
-intyg.select.sortkey=id
+# Certificate database writer SQL statements
+certificate.writer.sql=UPDATE certificate SET document = ? WHERE id = ?
+
+# Certificate database reader SQL statements
+certificate.reader.sql.select=SELECT id, received, document
+certificate.reader.sql.from=FROM original_certificate
+certificate.reader.sql.where=id >= :minId and id <= :maxId
+certificate.reader.sortkey=id
+
+# Original Certificate database writer SQL statements
+originalcertificate.writer.sql=UPDATE original_certificate SET certificate_id = ? WHERE id = ?
