--- a/schemas/pom.xml
+++ b/schemas/pom.xml
@@ -86,23 +86,23 @@
                   <extraarg>-xjc-Xinheritance</extraarg>
                   <extraarg>-p</extraarg>
                   <extraarg>
-                    urn:riv:clinicalprocess:healtcond:certificate:RegisterMedicalCertificateResponder:1=se.inera.certificate.clinicalprocess.healtcond.certificate.registerMedicalCertificate.v1
+                    urn:riv:clinicalprocess:healthcond:certificate:RegisterMedicalCertificateResponder:1=se.inera.certificate.clinicalprocess.healthcond.certificate.registerMedicalCertificate.v1
                   </extraarg>
                   <extraarg>-p</extraarg>
                   <extraarg>
-                    urn:riv:clinicalprocess:healtcond:certificate:RegisterMedicalCertificate:1:rivtabp20=se.inera.certificate.clinicalprocess.healtcond.certificate.registerMedicalCertificate.v1
+                    urn:riv:clinicalprocess:healthcond:certificate:RegisterMedicalCertificate:1:rivtabp20=se.inera.certificate.clinicalprocess.healthcond.certificate.registerMedicalCertificate.v1
                   </extraarg>
                   <extraarg>-p</extraarg>
                   <extraarg>
-                    urn:riv:clinicalprocess:healtcond:certificate:GetCertificateForCare:1:rivtabp20=se.inera.certificate.clinicalprocess.healtcond.certificate.getcertificateforcare.v1
+                    urn:riv:clinicalprocess:healthcond:certificate:GetCertificateForCare:1:rivtabp20=se.inera.certificate.clinicalprocess.healthcond.certificate.getcertificateforcare.v1
                   </extraarg>
                   <extraarg>-p</extraarg>
                   <extraarg>
-                    urn:riv:clinicalprocess:healtcond:certificate:GetCertificateForCareResponder:1=se.inera.certificate.clinicalprocess.healtcond.certificate.getcertificateforcare.v1
+                    urn:riv:clinicalprocess:healthcond:certificate:GetCertificateForCareResponder:1=se.inera.certificate.clinicalprocess.healthcond.certificate.getcertificateforcare.v1
                   </extraarg>
                   <extraarg>-p</extraarg>
                   <extraarg>
-                    urn:riv:clinicalprocess:healtcond:certificate:1=se.inera.certificate.clinicalprocess.healtcond.certificate.v1
+                    urn:riv:clinicalprocess:healthcond:certificate:1=se.inera.certificate.clinicalprocess.healthcond.certificate.v1
                   </extraarg>
 
 
@@ -240,7 +240,7 @@
 
                 <wsdlOption>
                   <wsdl>
-                    ${schema.path}/clinicalprocess/healtcond/certificate/RegisterMedicalCertificateInteraction/RegisterMedicalCertificateInteraction_1.0_rivtabp20.wsdl
+                    ${schema.path}/clinicalprocess/healthcond/certificate/RegisterMedicalCertificateInteraction/RegisterMedicalCertificateInteraction_1.0_rivtabp20.wsdl
                   </wsdl>
                   <bindingFiles>
                     <bindingFile>
@@ -250,14 +250,14 @@
                   <extraargs>
                     <extraarg>-wsdlLocation</extraarg>
                     <extraarg>
-                      classpath:schemas/clinicalprocess/healtcond/certificate/RegisterMedicalCertificateInteraction/RegisterMedicalCertificateInteraction_1.0_rivtabp20.wsdl
+                      classpath:schemas/clinicalprocess/healthcond/certificate/RegisterMedicalCertificateInteraction/RegisterMedicalCertificateInteraction_1.0_rivtabp20.wsdl
                     </extraarg>
                   </extraargs>
                 </wsdlOption>
 
                 <wsdlOption>
                   <wsdl>
-                    ${schema.path}/clinicalprocess/healtcond/certificate/GetCertificateForCareInteraction/GetCertificateForCareInteraction_1.0_rivtabp20.wsdl
+                    ${schema.path}/clinicalprocess/healthcond/certificate/GetCertificateForCareInteraction/GetCertificateForCareInteraction_1.0_rivtabp20.wsdl
                   </wsdl>
                   <bindingFiles>
                     <bindingFile>
@@ -267,7 +267,7 @@
                   <extraargs>
                     <extraarg>-wsdlLocation</extraarg>
                     <extraarg>
-                      classpath:schemas/clinicalprocess/healtcond/certificate/GetCertificateForCareInteraction/GetCertificateForCareInteraction_1.0_rivtabp20.wsdl
+                      classpath:schemas/clinicalprocess/healthcond/certificate/GetCertificateForCareInteraction/GetCertificateForCareInteraction_1.0_rivtabp20.wsdl
                     </extraarg>
                   </extraargs>
                 </wsdlOption>
