Fixed faulty maven-clean config in specifications pom

--- a/specifications/pom.xml
+++ b/specifications/pom.xml
@@ -130,7 +130,10 @@
               <directory>src/test/fitnesse/FitNesseRoot/RecentChanges</directory>
             </fileset>
             <fileset>
-              <directory>src/test/fitnesse/FitNesseRoot/files</directory>
+              <directory>src/test/fitnesse/FitNesseRoot/files/testProgress</directory>
+            </fileset>
+            <fileset>
+              <directory>src/test/fitnesse/FitNesseRoot/files/testResults</directory>
             </fileset>
           </filesets>
         </configuration>
