--- a/specifications/pom.xml
+++ b/specifications/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>se.inera.certificate</groupId>
     <artifactId>certificate</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4-SNAPSHOT</version>
   </parent>
   <artifactId>certificate-specifications</artifactId>
   <packaging>jar</packaging>
