--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,11 @@
         <artifactId>spring-aop</artifactId>
         <version>${spring.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jms</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
 
 
       <dependency>
