--- a/web/pom.xml
+++ b/web/pom.xml
@@ -56,6 +56,10 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-aop</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jms</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.hibernate.javax.persistence</groupId>
@@ -129,6 +133,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-jms_1.1_spec</artifactId>
+      <version>1.1.1</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   <build>
     <finalName>inera-certificate</finalName>
