Use (and configure) usage of statistics sender when certificates are registered and when they are cancelled (corrected).

--- a/web/src/main/resources/default.dev.properties
+++ b/web/src/main/resources/default.dev.properties
@@ -7,3 +7,5 @@ certificatesender.address.fk7263 = FK
 revokecertificate.address.fk7263 = FK
 
 store.original.certificate = true
+
+statistics.enabled = false
