--- a/web/pom.xml
+++ b/web/pom.xml
@@ -210,7 +210,12 @@
       <dependencies>
         <dependency>
           <groupId>org.apache.activemq</groupId>
-          <artifactId>activemq-all</artifactId>
+          <artifactId>activemq-broker</artifactId>
+          <version>5.8.0</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.activemq</groupId>
+          <artifactId>activemq-kahadb-store</artifactId>
           <version>5.8.0</version>
         </dependency>
         <dependency>
