--- a/schemas/pom.xml
+++ b/schemas/pom.xml
@@ -94,7 +94,7 @@
                   </extraarg>
                   <extraarg>-p</extraarg>
                   <extraarg>
-                    urn:riv:clinicalprocess:healthcond:certificate:GetCertificateForCare:1:rivtabp20=se.inera.certificate.clinicalprocess.healthcond.certificate.getcertificateforcare.v1
+                    urn:riv:clinicalprocess:healthcond:certificate:GetCertificateForCare:1:rivtabp21=se.inera.certificate.clinicalprocess.healthcond.certificate.getcertificateforcare.v1
                   </extraarg>
                   <extraarg>-p</extraarg>
                   <extraarg>
@@ -264,7 +264,7 @@
 
                 <wsdlOption>
                   <wsdl>
-                    ${schema.path}/clinicalprocess/healthcond/certificate/GetCertificateForCareInteraction/GetCertificateForCareInteraction_1.0_rivtabp20.wsdl
+                    ${schema.path}/clinicalprocess/healthcond/certificate/GetCertificateForCareInteraction/GetCertificateForCareInteraction_1.0_RIVTABP21.wsdl
                   </wsdl>
                   <bindingFiles>
                     <bindingFile>
@@ -274,7 +274,7 @@
                   <extraargs>
                     <extraarg>-wsdlLocation</extraarg>
                     <extraarg>
-                      classpath:schemas/clinicalprocess/healthcond/certificate/GetCertificateForCareInteraction/GetCertificateForCareInteraction_1.0_rivtabp20.wsdl
+                      classpath:schemas/clinicalprocess/healthcond/certificate/GetCertificateForCareInteraction/GetCertificateForCareInteraction_1.0_RIVTABP21.wsdl
                     </extraarg>
                   </extraargs>
                 </wsdlOption>
