--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>se.inera.certificate</groupId>
   <artifactId>certificate</artifactId>
@@ -50,6 +51,7 @@
     <guava.version>14.0.1</guava.version>
     <aspectj.version>1.7.1</aspectj.version>
     <xmlunit.version>1.4</xmlunit.version>
+    <activemq.version>5.8.0</activemq.version>
   </properties>
 
   <dependencyManagement>
@@ -211,11 +213,17 @@
         <version>${aspectj.version}</version>
       </dependency>
 
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>${guava.version}</version>
-    </dependency>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${guava.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.activemq</groupId>
+        <artifactId>activemq-client</artifactId>
+        <version>${activemq.version}</version>
+      </dependency>
 
       <dependency>
         <groupId>javax.servlet</groupId>
@@ -225,9 +233,9 @@
       </dependency>
 
       <dependency>
-      	<groupId>xmlunit</groupId>
-      	<artifactId>xmlunit</artifactId>
-      	<version>${xmlunit.version}</version>
+        <groupId>xmlunit</groupId>
+        <artifactId>xmlunit</artifactId>
+        <version>${xmlunit.version}</version>
         <scope>test</scope>
       </dependency>
 
@@ -363,7 +371,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore />
+                    <ignore/>
                   </action>
                 </pluginExecution>
               </pluginExecutions>
