Table names in SQL statements is case sensitive when executed on Linux.

--- a/migration-tool/migration-web/src/main/resources/batch-default.properties
+++ b/migration-tool/migration-web/src/main/resources/batch-default.properties
@@ -1,11 +1,11 @@
 # Certificate database writer SQL statements
-certificate.writer.sql=UPDATE certificate SET document = ? WHERE id = ?
+certificate.writer.sql=UPDATE CERTIFICATE SET document = ? WHERE id = ?
 
 # Certificate database reader SQL statements
 certificate.reader.sql.select=SELECT id, received, document
-certificate.reader.sql.from=FROM original_certificate
-certificate.reader.sql.where=id >= :minId and id <= :maxId
+certificate.reader.sql.from=FROM ORIGINAL_CERTIFICATE
+certificate.reader.sql.where=id >= :minId AND id <= :maxId
 certificate.reader.sortkey=id
 
 # Original Certificate database writer SQL statements
-originalcertificate.writer.sql=UPDATE original_certificate SET certificate_id = ? WHERE id = ?
+originalcertificate.writer.sql=UPDATE ORIGINAL_CERTIFICATE SET certificate_id = ? WHERE id = ?
