Fix för INTYG-750: Intyg med blanksteg i obligatoriska fält kan registreras, men inte skickas till FK.

--- a/schemas/pom.xml
+++ b/schemas/pom.xml
@@ -55,6 +55,13 @@
       <groupId>xmlunit</groupId>
       <artifactId>xmlunit</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.skyscreamer</groupId>
+      <artifactId>jsonassert</artifactId>
+      <version>1.2.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
