Hard coded SQL statement in processor had table name in lower-case which does not work when deployed on Linux. Table name now in upper-case and SQL statement moved to properties file.

--- a/migration-tool/migration-web/src/main/resources/batch-default.properties
+++ b/migration-tool/migration-web/src/main/resources/batch-default.properties
@@ -9,3 +9,6 @@ certificate.reader.sortkey=id
 
 # Original Certificate database writer SQL statements
 originalcertificate.writer.sql=UPDATE ORIGINAL_CERTIFICATE SET certificate_id = ? WHERE id = ?
+
+# CheckCertificateExistsProcessor SQL statement
+certificate.check.sql=SELECT count(*) FROM CERTIFICATE WHERE id = ?
