--- a/web/pom.xml
+++ b/web/pom.xml
@@ -187,6 +187,10 @@
               <name>java.awt.headless</name>
               <value>true</value>
             </systemProperty>            
+            <systemProperty>
+              <name>catalina.base</name>
+              <value>${project.build.directory}/catalina.base</value>
+            </systemProperty>
           </systemProperties>
         </configuration>
         <dependencies>
