Added database backed unit tests of the batch and its processors. Added JMS configuration. Updated database scripts and entities to match changes in inera-certificates project.

--- a/migration-tool/migration-web/src/main/resources/batch-default.properties
+++ b/migration-tool/migration-web/src/main/resources/batch-default.properties
@@ -11,11 +11,11 @@ certificate.reader.sortkey=id
 originalcertificate.writer.sql=UPDATE ORIGINAL_CERTIFICATE SET certificate_id = ? WHERE id = ?
 
 # CheckCertificateExistsProcessor SQL statement
-certificate.check.sql=SELECT count(*) FROM CERTIFICATE WHERE id = ?
+certificate.checkexists.sql=SELECT count(*) FROM CERTIFICATE WHERE id = ?
 
-certificate.reader2.sql.select=SELECT c.ID as id, c.DOCUMENT as document, cs.TIMESTAMP as ts
-certificate.reader2.sql.from=FROM CERTIFICATE c INNER JOIN CERTIFICATE_STATE cs ON c.ID = cs.CERTIFICATE_ID
-certificate.reader2.sql.where=WHERE cs.STATE = 'RECEIVED' ORDER BY ts ASC
-certificate.reader2.sortkey=id
+certs2stats.reader.sql.select=SELECT c.ID as id, c.DOCUMENT as document, cs.TIMESTAMP as ts
+certs2stats.reader.sql.from=FROM CERTIFICATE c INNER JOIN CERTIFICATE_STATE cs ON c.ID = cs.CERTIFICATE_ID
+certs2stats.reader.sql.where=WHERE cs.STATE = 'RECEIVED'
+certs2stats.reader.sortkey=ts
 
-certificate.state.sql=SELECT count(*) FROM CERTIFICATE_STATE WHERE CERTIFICATE_ID = ? AND STATE = ?
+certs2stats.statecheck.sql=SELECT count(*) FROM CERTIFICATE_STATE WHERE CERTIFICATE_ID = ? AND STATE = ?
