--- a/migration-tool/migration-web/src/test/resources/config/batch-test.properties
+++ b/migration-tool/migration-web/src/test/resources/config/batch-test.properties
@@ -10,3 +10,7 @@ intyg.drop.script=schema/intyg-drop-hsql.sql
 
 # If to drop and load db schema 
 intyg.generate.testdata=true
+
+# Active MQ tests
+
+activemq.test.queue=CERTIFICATE.QUEUE
