Rewrote certsToStats batch so it can be resumed if stopped. Added unit test for batch.

--- a/migration-tool/migration-web/src/main/resources/batch-default.properties
+++ b/migration-tool/migration-web/src/main/resources/batch-default.properties
@@ -1,21 +1,24 @@
-# Certificate database writer SQL statements
-certificate.writer.sql=UPDATE CERTIFICATE SET document = ? WHERE id = ?
+# Info model migration job database writer SQL statements
+certificate.writer.sql=UPDATE CERTIFICATE SET DOCUMENT = ? WHERE id = ?
 
-# Certificate database reader SQL statements
-certificate.reader.sql.select=SELECT id, received, document
+# Info model migration job database reader SQL statements
+certificate.reader.sql.select=SELECT ID, RECEIVED, DOCUMENT
 certificate.reader.sql.from=FROM ORIGINAL_CERTIFICATE
-certificate.reader.sql.where=id >= :minId AND id <= :maxId
-certificate.reader.sortkey=id
+certificate.reader.sql.where=ID >= :minId AND ID <= :maxId
+certificate.reader.sortkey=ID
 
-# Original Certificate database writer SQL statements
-originalcertificate.writer.sql=UPDATE ORIGINAL_CERTIFICATE SET certificate_id = ? WHERE id = ?
+# Info model migration job OriginalCertificate database writer SQL statements
+originalcertificate.writer.sql=UPDATE ORIGINAL_CERTIFICATE SET CERTIFICATE_ID = ? WHERE ID = ?
 
 # CheckCertificateExistsProcessor SQL statement
-certificate.checkexists.sql=SELECT count(*) FROM CERTIFICATE WHERE id = ?
+certificate.checkexists.sql=SELECT COUNT(*) FROM CERTIFICATE WHERE ID = ?
 
-certs2stats.reader.sql.select=SELECT c.ID as id, c.DOCUMENT as document, cs.TIMESTAMP as ts
-certs2stats.reader.sql.from=FROM CERTIFICATE c INNER JOIN CERTIFICATE_STATE cs ON c.ID = cs.CERTIFICATE_ID
-certs2stats.reader.sql.where=WHERE cs.STATE = 'RECEIVED'
-certs2stats.reader.sortkey=ts
+# Certificate to stats database reader SQL
+certs2stats.reader.sql.select=SELECT ID, CERTIFICATE_ID
+certs2stats.reader.sql.from=FROM ORIGINAL_CERTIFICATE
+certs2stats.reader.sql.where=WHERE CERTIFICATE_ID IS NOT NULL
+certs2stats.reader.sortkey=ID
 
-certs2stats.statecheck.sql=SELECT count(*) FROM CERTIFICATE_STATE WHERE CERTIFICATE_ID = ? AND STATE = ?
+# Certificate to stats processors SQL
+certs2stats.fetchcertificate.sql=SELECT ID, DOCUMENT FROM CERTIFICATE WHERE ID = ?
+certs2stats.statecheck.sql=SELECT COUNT(*) FROM CERTIFICATE_STATE WHERE CERTIFICATE_ID = ? AND STATE = ?
